* Thu Mar 03 2016 - version 0.5.2
- Fix ActiveRecord dependency
- Require json
- Fix params_spec

* Fri Feb 26 2016 - version 0.5.1
- Fix call of an empty hook

* Tue Feb 9 2016 - version 0.5.0
- Helper methods for testing APIs
- Added tests covering the basic functionality
- Fixed overflow in table of contents in online API doc
- Authentication chain can be empty
- Fixed Params.optional
- Fixed coercion of Float input parameters
- Renamed Params::Param to Parameters::Typed and Params::Resource to
  Parameters::Resource
- Instance-level hooks are stored in the object itself

* Sun Jan 24 2016 - version 0.4.2
- Inclusion validator: handle hash correctly, don't overwrite given values

* Sat Jan 23 2016 - version 0.4.1
- Fix parameter label setting
- Don't change hash arguments given to parameters

* Wed Jan 20 2016 - version 0.4.0
- Introduced protocol version, currently 1.0
- Renamed certain API configuration methods
- Document defined hooks in yardoc
- Implicit API version
- Include input parameter validators in the protocol
- Present validator from ActiveRecord is not imported to controller
- Clean-up dependencies
- Cross-link resources in online API documentation
- JSON schema of the documentation protocol
- UML diagram representing the documentation protocol
- Improved error reporting in action definition